--- a/index.html
+++ b/index.html
@@ -2,21 +2,9 @@
 <html>
 
 <head>
-<style>
-
-html, body {
-
-
-
-margin:0;
-
-padding:0;
-
-
-
-}
-</style>
+test
 </head>
-
+<body>
  hello World
+ </body>
 </html>
